After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748347 - files does not present the desktop when running under wayland
files does not present the desktop when running under wayland
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Desktop
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 775608 (view as bug list)
Depends on: 712620
Blocks:
 
 
Reported: 2015-04-23 01:29 UTC by kendell clark
Modified: 2017-05-01 03:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
desktop: Force X11 backend (989 bytes, patch)
2016-12-07 17:17 UTC, Florian Müllner
committed Details | Review

Description kendell clark 2015-04-23 01:29:03 UTC
When running under wayland, nautilus does not create the desktop area. This might be a duplicate or a blocker for bug #746286. Sorry for the clutter
Comment 1 Cosimo Cecchi 2015-05-23 23:30:08 UTC
This will likely need the application/desktop split described in bug 712620 to be possible.
Comment 2 Carlos Soriano 2016-04-14 09:19:01 UTC
There are no plans for now to support the desktop in Wayland, since it requires few things that only compositors or window managers have access to, like lowering the window on the stack.
Comment 3 Felix Schwarz 2016-11-30 21:45:23 UTC
(In reply to Carlos Soriano from comment #2)
> There are no plans for now to support the desktop in Wayland, since it
> requires few things that only compositors or window managers have access to,
> like lowering the window on the stack.

What is the best ticket on bgo to watch if users are interested in having desktop icons on Wayland? We have some Fedora users who are interested in keeping their desktop icons and this is clearly an upstream "issue".

This was the best ticket I could come up with but it's a bit unsatisfactory referring to a "RESOLVED WONTFIX" ticket from the Fedora bug tracker. I understand that you are not interested in implementing this yourself.

However there are quite a few users who are interested in the feature so I'd like to see one ticket which tracks the (lack of) progress. Maybe we could reopen this ticket?
Comment 4 Carlos Soriano 2016-11-30 22:58:44 UTC
(In reply to Felix Schwarz from comment #3)
> (In reply to Carlos Soriano from comment #2)
> > There are no plans for now to support the desktop in Wayland, since it
> > requires few things that only compositors or window managers have access to,
> > like lowering the window on the stack.
> 
> What is the best ticket on bgo to watch if users are interested in having
> desktop icons on Wayland? We have some Fedora users who are interested in
> keeping their desktop icons and this is clearly an upstream "issue".
> 
> This was the best ticket I could come up with but it's a bit unsatisfactory
> referring to a "RESOLVED WONTFIX" ticket from the Fedora bug tracker. I
> understand that you are not interested in implementing this yourself.
> 
> However there are quite a few users who are interested in the feature so I'd
> like to see one ticket which tracks the (lack of) progress. Maybe we could
> reopen this ticket?

You can use this one, reopened.
Comment 5 Felix Schwarz 2016-12-01 08:38:41 UTC
Just for reference: downstream Fedora issue is https://bugzilla.redhat.com/show_bug.cgi?id=1280195
Comment 6 Carlos Soriano 2016-12-07 16:28:22 UTC
*** Bug 775608 has been marked as a duplicate of this bug. ***
Comment 7 William Di Luigi 2016-12-07 16:37:21 UTC
(In reply to Carlos Soriano from comment #2)
> There are no plans for now to support the desktop in Wayland, since it
> requires few things that only compositors or window managers have access to,
> like lowering the window on the stack.

I don't know what I'm talking about, but maybe it would be better to delegate the "show icons on desktop" task to gnome-shell instead of nautilus?

I would say that it doesn't matter if the style of icons will be different between nautilus and the desktop icons. It may even be better to have completely different systems for that (as one may want to have different stuff on their desktop, like notes or a calculator or a clock, not just files and folders).

If the idea is reasonable, I may also try to contribute to making it happen (I don't really know where to start but I know JS and C++).
Comment 8 Jan Niklas Hasse (Account disabled) 2016-12-07 16:45:06 UTC
Good points :) Are you subscribed to the GNOME Shell mailing list? I think it might be a good idea to start a discussion there.
Comment 9 Florian Müllner 2016-12-07 17:17:35 UTC
Created attachment 341570 [details] [review]
desktop: Force X11 backend

At least for the time being, desktop icons are not supported on
wayland. This may or may not change, but in the meantime we can
still meet user expectations by forcing the supported backend
instead of failing with an unsupported one.
Comment 10 William Di Luigi 2016-12-07 20:54:49 UTC
Thank you for the patch! I applied it.

I now have the desktop icons again. I just needed to restart nautilus and set "show desktop icon" to false and then to true again.
Comment 11 Carlos Soriano 2016-12-07 22:21:45 UTC
Review of attachment 341570 [details] [review]:

wait... is this going to make nautilus-desktop use xwayland on startup?
Comment 12 Florian Müllner 2016-12-07 22:55:27 UTC
(In reply to Carlos Soriano from comment #11)
> wait... is this going to make nautilus-desktop use xwayland on startup?

Yes. (Not quite sure what you mean by "on startup", the method allows to influence the backend selection if called before GTK+ is initialized. In this case, it prevents GTK from using any backend but the x11 one, which I think is OK given that nautilus-desktop doesn't do anything besides printing a warning in that case anyway. It doesn't stop being a hack though of course.)
Comment 13 Carlos Soriano 2016-12-07 23:49:10 UTC
right, this is what I meant. I didn't really think about executing using xwayland at all, that's actually a good idea!
Comment 14 Carlos Soriano 2016-12-07 23:49:44 UTC
Review of attachment 341570 [details] [review]:

LGTM, thanks for the idea (+ patch) Florian!

Can you commit to 3.22 too?
Comment 15 Florian Müllner 2016-12-08 14:02:54 UTC
Attachment 341570 [details] pushed as 2ce1635 - desktop: Force X11 backend
Comment 16 Florian Müllner 2016-12-08 14:05:39 UTC
Sure!