desktop: Force X11 backend

At least for the time being, desktop icons are not supported on
wayland. This may or may not change, but in the meantime we can
still meet user expectations by forcing the supported backend
instead of failing with an unsupported one.

https://bugzilla.gnome.org/show_bug.cgi?id=748347